--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                 <div class="category" onclick="showProducts('bebidas')">Bebidas</div>
             </div>
             <div id="products" class="products"></div>
-            <ul id="orden-list"></ul>
+            <ul id="orden-list" class="scrollable"></ul>
             <button onclick="confirmarOrden()">Confirmar Orden</button>
+            <button onclick="cancelarOrden()">Cancelar Orden</button>
         </div>
         
         <!-- Pantalla de Confirmación de Órdenes -->
