--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3 class="center-title">Orden de la mesa <span id="mesa-numero"></span></h3>
             <div class="mesa-info">
                 <label>Mesa: <span id="mesa-seleccionada"></span></label>
-                <label>Pax: <input type="number" id="pax" min="1" value="1"></label>
+                <label>Cuentas: <input type="number" id="cuentas" min="1" value="1" onchange="actualizarCuentas()"></label>
                 <label>Para llevar: <input type="checkbox" id="para-llevar"></label>
             </div>
             <div class="container">
