--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
             <button onclick="showScreen('mesas-screen')">Volver a Mesas</button>
         </div>
     </div>
+
+    <!-- Modal para añadir notas -->
+    <div id="nota-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="cerrarModal()">&times;</span>
+            <h3>Añadir Nota</h3>
+            <textarea id="nota-texto" placeholder="Escribe tu nota aquí"></textarea>
+            <button onclick="guardarNota()">Guardar Nota</button>
+        </div>
+    </div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
