--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div id="confirmacion-screen" class="screen">
             <h3>Confirmación de Orden</h3>
             <ul id="confirmacion-list"></ul>
-            <div class="button-group">
+            <div class="button-group vertical">
                 <button onclick="enviarCocina()">Enviar a Cocina</button>
                 <button onclick="showScreen('toma-ordenes-screen')">Volver a la Orden</button>
             </div>
