--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         </div>
     </div>
 
+    <!-- Carga del script al final para asegurar que el DOM esté completamente cargado -->
     <script src="scripts.js"></script>
 </body>
 </html>
