--- a/index.html
+++ b/index.html
@@ -13,24 +13,32 @@
             <h3>Iniciar Sesión</h3>
             <input type="text" id="username" placeholder="Usuario">
             <input type="password" id="password" placeholder="Contraseña">
-            <button onclick="showScreen('para-llevar-screen')">Iniciar Sesión</button>
+            <button onclick="showScreen('seleccion-mesas-screen')">Iniciar Sesión</button>
         </div>
         
-        <!-- Pantalla de Selección de Órdenes Para Llevar -->
-        <div id="para-llevar-screen" class="screen">
-            <h3>Órdenes Para Llevar</h3>
-            <div id="para-llevar" class="mesas scrollable"></div>
-            <button onclick="crearParaLlevar()">Añadir Orden Para Llevar</button>
+        <!-- Pantalla de Selección de Mesas y Para Llevar -->
+        <div id="seleccion-mesas-screen" class="screen">
+            <h3>Seleccionar Mesa o Para Llevar</h3>
+            <div>
+                <h4>Mesas</h4>
+                <div id="mesas" class="mesas scrollable"></div>
+            </div>
+            <div>
+                <h4>Para Llevar</h4>
+                <div id="para-llevar" class="mesas scrollable"></div>
+                <button onclick="crearParaLlevar()">Añadir Orden Para Llevar</button>
+            </div>
             <button onclick="showScreen('cocina-screen')">Ir a Cocina</button>
         </div>
         
         <!-- Pantalla de Toma de Órdenes -->
         <div id="toma-ordenes-screen" class="screen">
             <div class="header">
-                <h3 class="center-title">Orden Para Llevar <span id="orden-numero"></span></h3>
+                <h3 class="center-title">Orden <span id="orden-tipo"></span> <span id="orden-numero"></span></h3>
                 <div class="mesa-info">
+                    <label>Mesa: <span id="mesa-seleccionada"></span></label>
                     <label>Cuentas: <input type="number" id="cuentas" min="1" value="1" onchange="actualizarCuentas()"></label>
-                    <label>Para llevar: <input type="checkbox" id="para-llevar-checkbox" checked disabled></label>
+                    <label>Para llevar: <input type="checkbox" id="para-llevar-checkbox" disabled></label>
                 </div>
             </div>
             <div class="container">
@@ -77,7 +85,7 @@
         <div id="cocina-screen" class="screen">
             <h3>Órdenes en Cocina</h3>
             <div id="cocina-list" class="cocina-list scrollable"></div>
-            <button onclick="showScreen('para-llevar-screen')">Volver a Órdenes Para Llevar</button>
+            <button onclick="showScreen('seleccion-mesas-screen')">Volver a Selección de Mesas</button>
         </div>
     </div>
 
