--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="header">
                 <h3 class="center-title">Orden <span id="orden-tipo"></span> <span id="orden-numero"></span></h3>
                 <div class="mesa-info">
-                    <label>Mesa: <span id="mesa-seleccionada"></span></label>
+                    <label id="mesa-label">Mesa: <span id="mesa-seleccionada"></span></label>
                     <label>Cuentas: <input type="number" id="cuentas" min="1" value="1" onchange="actualizarCuentas()"></label>
                     <label>Para llevar: <input type="checkbox" id="para-llevar-checkbox" disabled></label>
                 </div>
@@ -60,7 +60,7 @@
             </div>
             <div class="footer">
                 <button onclick="confirmarOrden()">Confirmar Orden</button>
-                <button onclick="cancelarOrden()">Cancelar Orden</button>
+                <button onclick="cancelarOrden()">Volver a Mesas</button>
             </div>
         </div>
         
