--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+     <div id="app">
     <!-- Pantalla de inicio de sesión -->
     <div id="login-screen" class="screen active">
         <h2>Inicio de Sesión</h2>
@@ -79,6 +80,8 @@
         <div id="bar-list" class="bar-list"></div>
         <button onclick="showScreen('seleccion-mesas-screen')">Volver a Mesas</button>
     </div>
+    </div>
+         
 
     <!-- Modal para añadir notas -->
     <div id="nota-modal" class="modal">
