--- a/index.html
+++ b/index.html
@@ -7,79 +7,78 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="app">
-        <!-- Pantalla de inicio de sesión -->
-        <div id="login-screen" class="screen active">
-            <h2>Inicio de Sesión</h2>
-            <input type="text" placeholder="Usuario" id="usuario">
-            <input type="password" placeholder="Contraseña" id="contrasena">
-            <button onclick="showScreen('seleccion-mesas-screen')">Entrar</button>
+    <!-- <div id="app">
+       <!-- Pantalla de inicio de sesión -->
+    <div id="login-screen" class="screen active">
+        <h2>Inicio de Sesión</h2>
+        <input type="text" placeholder="Usuario" id="usuario">
+        <input type="password" placeholder="Contraseña" id="contrasena">
+        <button onclick="showScreen('seleccion-mesas-screen')">Entrar</button>
+    </div>
+
+    <!-- Pantalla de selección de mesas -->
+    <div id="seleccion-mesas-screen" class="screen">
+        <h2>Seleccionar Mesa</h2>
+        <div id="mesas" class="mesas"></div>
+        <h2>Para Llevar</h2>
+        <div id="para-llevar" class="para-llevar"></div>
+        <button onclick="crearParaLlevar()">Nueva Orden Para Llevar</button>
+        <button onclick="showScreen('cocina-screen')">Ver Cocina</button>
+        <button onclick="showScreen('bar-screen')">Ver Bar</button>
+    </div>
+
+    <!-- Pantalla de toma de órdenes -->
+    <div id="toma-ordenes-screen" class="screen">
+        <h2>Orden de <span id="orden-tipo"></span> <span id="orden-numero"></span></h2>
+        <div class="header">
+            <label>
+                Cuentas:
+                <input type="number" id="cuentas" value="1" min="1" onchange="actualizarCuentas()">
+            </label>
         </div>
 
-        <!-- Pantalla de selección de mesas -->
-        <div id="seleccion-mesas-screen" class="screen">
-            <h2>Seleccionar Mesa</h2>
-            <div id="mesas" class="mesas"></div>
-            <h2>Para Llevar</h2>
-            <div id="para-llevar" class="para-llevar"></div>
-            <button onclick="crearParaLlevar()">Nueva Orden Para Llevar</button>
-            <button onclick="showScreen('cocina-screen')">Ver Cocina</button>
-            <button onclick="showScreen('bar-screen')">Ver Bar</button>
-        </div>
-
-        <!-- Pantalla de toma de órdenes -->
-        <div id="toma-ordenes-screen" class="screen">
-            <h2>Orden de <span id="orden-tipo"></span> <span id="orden-numero"></span></h2>
-            <div class="header">
-                <label>
-                    Cuentas:
-                    <input type="number" id="cuentas" value="1" min="1" onchange="actualizarCuentas()">
-                </label>
-            </div>
-
-                <div class="container">
-                    <div id="selection" class="selection scrollable">
-                        <div id="categories" class="categories">
-                            <div class="category" onclick="showProducts('entradas')">Entradas</div>
-                            <div class="category" onclick="showProducts('platos')">Platos Fuertes</div>
-                            <div class="category" onclick="showProducts('postres')">Postres</div>
-                            <div class="category" onclick="showProducts('bebidas')">Bebidas</div>
-                            <div class="category" onclick="showProducts('bebidasAlcoolicas')">Bebidas Alcohólicas</div>
-                            <div class="category" onclick="showProducts('adicionales')">Adicionales</div>
-                        </div>
-                        <div id="products" class="products"></div>
-                        <button id="back-to-categories" onclick="showCategories()">Volver a Categorías</button>
-                    </div>
-                    <div id="order" class="order scrollable">
-                        <ul id="orden-list"></ul>
-                    </div>
+        <div class="container">
+            <div id="selection" class="selection scrollable">
+                <div id="categories" class="categories">
+                    <div class="category" onclick="showProducts('entradas')">Entradas</div>
+                    <div class="category" onclick="showProducts('platos')">Platos Fuertes</div>
+                    <div class="category" onclick="showProducts('postres')">Postres</div>
+                    <div class="category" onclick="showProducts('bebidas')">Bebidas</div>
+                    <div class="category" onclick="showProducts('bebidasAlcoolicas')">Bebidas Alcohólicas</div>
+                    <div class="category" onclick="showProducts('adicionales')">Adicionales</div>
                 </div>
+                <div id="products" class="products"></div>
+                <button id="back-to-categories" onclick="showCategories()">Volver a Categorías</button>
+            </div>
+            <div id="order" class="order scrollable">
+                <ul id="orden-list"></ul>
+            </div>
+        </div>
+        <div class="footer">
+            <button onclick="confirmarOrden()">Confirmar Orden</button>
+            <button onclick="cancelarOrden()">Cancelar Orden</button>
+        </div>
+
+        <!--
+                <div id="categories" class="categories">
+                    <div class="category" onclick="showProducts('entradas')">Entradas</div>
+                    <div class="category" onclick="showProducts('platos')">Platos Fuertes</div>
+                    <div class="category" onclick="showProducts('postres')">Postres</div>
+                    <div class="category" onclick="showProducts('bebidas')">Bebidas</div>
+                    <div class="category" onclick="showProducts('bebidasAlcoolicas')">Bebidas Alcohólicas</div>
+                    <div class="category" onclick="showProducts('adicionales')">Adicionales</div>
+                </div>
+                <div id="products" class="products"></div>
+                <button id="back-to-categories" onclick="showCategories()">Volver a Categorías</button>
+                <ul id="orden-list" class="orden-list scrollable"></ul>
                 <div class="footer">
-                    <button onclick="confirmarOrden()">Confirmar Orden</button>
-                    <button onclick="cancelarOrden()">Cancelar Orden</button>
-                </div>
-
-    <!--
-            <div id="categories" class="categories">
-                <div class="category" onclick="showProducts('entradas')">Entradas</div>
-                <div class="category" onclick="showProducts('platos')">Platos Fuertes</div>
-                <div class="category" onclick="showProducts('postres')">Postres</div>
-                <div class="category" onclick="showProducts('bebidas')">Bebidas</div>
-                <div class="category" onclick="showProducts('bebidasAlcoolicas')">Bebidas Alcohólicas</div>
-                <div class="category" onclick="showProducts('adicionales')">Adicionales</div>
-            </div>
-            <div id="products" class="products"></div>
-            <button id="back-to-categories" onclick="showCategories()">Volver a Categorías</button>
-            <ul id="orden-list" class="orden-list scrollable"></ul>
-            <div class="footer">
-                <div class="button-group">
-                    <button onclick="confirmarOrden()">Confirmar Orden</button>
-                    <button onclick="cancelarOrden()">Volver a Mesas</button>
+                    <div class="button-group">
+                        <button onclick="confirmarOrden()">Confirmar Orden</button>
+                        <button onclick="cancelarOrden()">Volver a Mesas</button>
+                    </div>
                 </div>
             </div>
-        </div>
-    -->
-        
+        -->
         <!-- Pantalla de confirmación de órdenes -->
         <div id="confirmacion-screen" class="screen">
             <h2>Confirmar Orden</h2>
@@ -106,8 +105,8 @@
             <button onclick="showScreen('seleccion-mesas-screen')">Volver a Mesas</button>
         </div>
     </div>
-         
-    </div>
+
+    <!--  </div>
 
     <!-- Modal para añadir notas -->
     <div id="nota-modal" class="modal">
