--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!--<div id="app">
+    <div id="app">
        <!-- Pantalla de inicio de sesión -->
     <div id="login-screen" class="screen active">
         <h2>Inicio de Sesión</h2>
@@ -107,7 +107,7 @@
     </div>
     </div>
 
-    <!--</div>
+    </div>
 
     <!-- Modal para añadir notas -->
     <div id="nota-modal" class="modal">
