Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2>Inicio de Sesión</h2>
             <input type="text" placeholder="Usuario" id="usuario">
             <input type="password" placeholder="Contraseña" id="contrasena">
-            <button onclick="showScreen('seleccion-mesas-screen')">Entrar</button>
+            <button onclick="iniciarSesion()">Entrar</button>
         </div>
 
         <!-- Pantalla de selección de mesas -->
